add resync subttile

--- a/src/main/resources/strings_ja.properties
+++ b/src/main/resources/strings_ja.properties
@@ -3,10 +3,12 @@ title_rar_to_zip=RAR\u304B\u3089ZIP\u306B\u5909\u63DB
 title_change_file_extension=\u30D5\u30A1\u30A4\u30EB\u62E1\u5F35\u5B50\u3092\u5909\u66F4
 title_convert_image_format=\u753B\u50CF\u3092\u7570\u306A\u308B\u5F62\u5F0F\u306B\u5909\u63DB
 title_create_thumbnail=\u753B\u50CF\u304B\u3089\u30B5\u30E0\u30CD\u30A4\u30EB\u3092\u4F5C\u6210
+title_shift_subtitle=\u5B57\u5E55\u306E\u30B7\u30F3\u30AF\u3092\u8ABF\u6574
 settings=\u8A2D\u5B9A
 language=\u8A00\u8A9E
 process=\u958B\u59CB
 select_directory=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u9078\u629E
+select_file=\u30D5\u30A1\u30A4\u30EB\u3092\u9078\u629E
 selected_path=\u9078\u629E\u3057\u305F\u30D1\u30B9
 none=\u306A\u3057
 success=\u6210\u529F
@@ -25,3 +27,4 @@ aspect_ratio=\u30A2\u30B9\u30DA\u30AF\u30C8\u6BD4
 width=\u5E45
 height=\u7E26
 ratio=\u6BD4\u7387
+input_shift_milliseconds=\u30B7\u30D5\u30C8\u3059\u308B\u5024\u3092\u5165\u529B\uFF08\u30DF\u30EA\u79D2\uFF09
