--- a/src/main/resources/strings_ko.properties
+++ b/src/main/resources/strings_ko.properties
@@ -3,10 +3,12 @@ title_rar_to_zip=RAR\uC5D0\uC11C ZIP\uC73C\uB85C \uBCC0\uD658
 title_change_file_extension=\uD30C\uC77C \uD655\uC7A5\uC790 \uBCC0\uACBD
 title_convert_image_format=\uC774\uBBF8\uC9C0 \uD615\uC2DD \uBCC0\uD658
 title_create_thumbnail=\uC774\uBBF8\uC9C0\uC5D0\uC11C \uC378\uB124\uC77C \uB9CC\uB4E4\uAE30
+title_shift_subtitle=\uC790\uB9C9 \uC2F1\uD06C \uC870\uC815
 settings=\uC124\uC815
 language=\uC5B8\uC5B4
 process=\uC2DC\uC791
 select_directory=\uB514\uB809\uD1A0\uB9AC \uC120\uD0DD
+select_file=\uD30C\uC77C \uC120\uD0DD
 selected_path=\uC120\uD0DD\uD55C \uACBD\uB85C
 none=\uC5C6\uC74C
 success=\uC131\uACF5
@@ -25,3 +27,4 @@ aspect_ratio=\uBE44\uC728
 width=\uD3ED
 height=\uB192\uC774
 ratio=\uBE44\uC728
+input_shift_milliseconds=\uC870\uC815\uD560 \uC2DC\uAC04\uC744 \uC785\uB825(\uBC00\uB9AC\uCD08)
