--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -3,10 +3,12 @@ title_rar_to_zip=Convert RAR to ZIP
 title_change_file_extension=Change file extension
 title_convert_image_format=Convert images to different formats
 title_create_thumbnail=Create Thumbnail from Image
+title_shift_subtitle=Resync Subtitle
 settings=Settings
 language=Language
 process=Process
 select_directory=Select Directory
+select_file=Select File
 selected_path=Selected Path
 none=none
 success=Success
@@ -25,3 +27,4 @@ aspect_ratio=Aspect Ratio
 width=Width
 height=Height
 ratio=Ratio
+input_shift_milliseconds=Input timing (milliseconds)
