--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -1,9 +1,15 @@
 title_archive_subdirectories=Archive Subdirectories
+tooltip_archive_subdirectories=Archive all subdirectories in the selected directory
 title_rar_to_zip=Convert RAR to ZIP
+tooltip_rar_to_zip=Convert RAR archives to ZIP archives in the selected directory
 title_change_file_extension=Change file extension
+tooltip_change_file_extension=Changes file extension of files in the selected directory
 title_convert_image_format=Convert images to different formats
+tooltip_convert_image_format=Convert images to different formats in the selected directory
 title_create_thumbnail=Create Thumbnail from Image
+tooltip_create_thumbnail=Resize image to create thumbnail in the selected directory
 title_shift_subtitle=Resync Subtitle
+tooltip_shift_subtitle=Shift subtitle timing of a selected file
 settings=Settings
 language=Language
 process=Process
