--- a/src/main/resources/strings_ja.properties
+++ b/src/main/resources/strings_ja.properties
@@ -1,9 +1,15 @@
 title_archive_subdirectories=\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u30A2\u30FC\u30AB\u30A4\u30D6
+tooltip_archive_subdirectories=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u3059\u3079\u3066\u306E\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092ZIP\u30D5\u30A1\u30A4\u30EB\u306B\u30A2\u30FC\u30AB\u30A4\u30D6\u3057\u307E\u3059
 title_rar_to_zip=RAR\u304B\u3089ZIP\u306B\u5909\u63DB
+tooltip_rar_to_zip=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306ERAR\u30A2\u30FC\u30AB\u30A4\u30D6\u3092ZIP\u30A2\u30FC\u30AB\u30A4\u30D6\u306B\u5909\u63DB\u3057\u307E\u3059
 title_change_file_extension=\u30D5\u30A1\u30A4\u30EB\u62E1\u5F35\u5B50\u3092\u5909\u66F4
+tooltip_change_file_extension=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u30D5\u30A1\u30A4\u30EB\u306E\u62E1\u5F35\u5B50\u3092\u5909\u66F4\u3057\u307E\u3059
 title_convert_image_format=\u753B\u50CF\u3092\u7570\u306A\u308B\u5F62\u5F0F\u306B\u5909\u63DB
+tooltip_convert_image_format=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u753B\u50CF\u3092\u7570\u306A\u308B\u5F62\u5F0F\u306B\u5909\u63DB\u3057\u307E\u3059
 title_create_thumbnail=\u753B\u50CF\u304B\u3089\u30B5\u30E0\u30CD\u30A4\u30EB\u3092\u4F5C\u6210
+tooltip_create_thumbnail=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u753B\u50CF\u3092\u30EA\u30B5\u30A4\u30BA\u3057\u3066\u30B5\u30E0\u30CD\u30A4\u30EB\u3092\u4F5C\u6210\u3057\u307E\u3059
 title_shift_subtitle=\u5B57\u5E55\u306E\u30B7\u30F3\u30AF\u3092\u8ABF\u6574
+tooltip_shift_subtitle=\u9078\u629E\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u5B57\u5E55\u306E\u30BF\u30A4\u30DF\u30F3\u30B0\u3092\u8ABF\u6574\u3057\u307E\u3059
 settings=\u8A2D\u5B9A
 language=\u8A00\u8A9E
 process=\u958B\u59CB
