--- a/src/main/resources/strings_ko.properties
+++ b/src/main/resources/strings_ko.properties
@@ -1,9 +1,15 @@
 title_archive_subdirectories=\uD558\uC704 \uB514\uB809\uD1A0\uB9AC \uC555\uCD95
+tooltip_archive_subdirectories=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uBAA8\uB4E0 \uD558\uC704 \uB514\uB809\uD1A0\uB9AC\uB97C\u3000ZIP \uD30C\uC77C\uB85C \uC555\uCD95\uD569\uB2C8\uB2E4
 title_rar_to_zip=RAR\uC5D0\uC11C ZIP\uC73C\uB85C \uBCC0\uD658
+tooltip_rar_to_zip=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 RAR \uC544\uCE74\uC774\uBE0C\uB97C ZIP \uC544\uCE74\uC774\uBE0C\uB85C \uBCC0\uD658\uD569\uB2C8\uB2E4
 title_change_file_extension=\uD30C\uC77C \uD655\uC7A5\uC790 \uBCC0\uACBD
+tooltip_change_file_extension=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uD30C\uC77C \uD655\uC7A5\uC790\uB97C \uBCC0\uACBD\uD569\uB2C8\uB2E4
 title_convert_image_format=\uC774\uBBF8\uC9C0 \uD615\uC2DD \uBCC0\uD658
+tooltip_convert_image_format=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uC774\uBBF8\uC9C0\uB97C \uB2E4\uB978 \uD615\uC2DD\uC73C\uB85C \uBCC0\uD658\uD569\uB2C8\uB2E4
 title_create_thumbnail=\uC774\uBBF8\uC9C0\uC5D0\uC11C \uC378\uB124\uC77C \uB9CC\uB4E4\uAE30
+tooltip_create_thumbnail=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uC774\uBBF8\uC9C0\uB97C \uB9AC\uC0AC\uC774\uC988\uD558\uC5EC \uC378\uB124\uC77C\uC744 \uB9CC\uB4ED\uB2C8\uB2E4
 title_shift_subtitle=\uC790\uB9C9 \uC2F1\uD06C \uC870\uC815
+tooltip_shift_subtitle=\uC120\uD0DD\uD55C \uD30C\uC77C\uC758 \uC790\uB9C9 \uC2F1\uD06C\uB97C \uC870\uC815\uD569\uB2C8\uB2E4
 settings=\uC124\uC815
 language=\uC5B8\uC5B4
 process=\uC2DC\uC791
