--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -20,6 +20,7 @@ none=none
 success=Success
 failed=Failed
 include_parent_directory=Include parent directory in archive
+include_archive_files=Include archive files (ZIP, CBZ) to be converted
 ignore_case=Ignore Case
 from_extension=From Extension
 to_extension=To Extension
