--- a/src/main/resources/strings_ja.properties
+++ b/src/main/resources/strings_ja.properties
@@ -20,6 +20,7 @@ none=\u306A\u3057
 success=\u6210\u529F
 failed=\u5931\u6557
 include_parent_directory=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u30A2\u30FC\u30AB\u30A4\u30D6\u306B\u542B\u3081\u308B
+include_archive_files=\u5909\u63DB\u5BFE\u8C61\u306B\u30A2\u30FC\u30AB\u30A4\u30D6\u30D5\u30A1\u30A4\u30EB\uFF08ZIP\u3001CBZ\uFF09\u3092\u542B\u3081\u308B
 ignore_case=\u5927\u5C0F\u6587\u5B57\u3092\u533A\u5225\u3057\u306A\u3044
 from_extension=\u5143\u306E\u62E1\u5F35\u5B50
 to_extension=\u5909\u63DB\u5F8C\u306E\u62E1\u5F35\u5B50
