--- a/src/main/resources/strings_ko.properties
+++ b/src/main/resources/strings_ko.properties
@@ -20,6 +20,7 @@ none=\uC5C6\uC74C
 success=\uC131\uACF5
 failed=\uC2E4\uD328
 include_parent_directory=\uB514\uB809\uD1A0\uB9AC \uC555\uCD95
+include_archive_files=\uBCC0\uD658\uD560 \uB300\uC0C1\uC5D0 \uC544\uCE74\uC774\uBE0C \uD30C\uC77C(ZIP, CBZ) \uD3EC\uD568
 ignore_case=\uB300\uC18C\uBB38\uC790 \uAD6C\uBD84 \uC548 \uD568
 from_extension=\uC6D0\uB798 \uD655\uC7A5\uC790
 to_extension=\uBCC0\uD658 \uD6C4 \uD655\uC7A5\uC790
