fix bugs, progress bar, add snackbar

--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -10,6 +10,8 @@ title_create_thumbnail=Create Thumbnail from Image
 tooltip_create_thumbnail=Resize image to create thumbnail in the selected directory
 title_shift_subtitle=Resync Subtitle
 tooltip_shift_subtitle=Shift subtitle timing of a selected file
+total=Total
+processing=Processing
 settings=Settings
 language=Language
 process=Process
