--- a/src/main/resources/strings_ja.properties
+++ b/src/main/resources/strings_ja.properties
@@ -10,6 +10,8 @@ title_create_thumbnail=\u753B\u50CF\u304B\u3089\u30B5\u30E0\u30CD\u30A4\u30EB\u3
 tooltip_create_thumbnail=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u753B\u50CF\u3092\u30EA\u30B5\u30A4\u30BA\u3057\u3066\u30B5\u30E0\u30CD\u30A4\u30EB\u3092\u4F5C\u6210\u3057\u307E\u3059
 title_shift_subtitle=\u5B57\u5E55\u306E\u30B7\u30F3\u30AF\u3092\u8ABF\u6574
 tooltip_shift_subtitle=\u9078\u629E\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u5B57\u5E55\u306E\u30BF\u30A4\u30DF\u30F3\u30B0\u3092\u8ABF\u6574\u3057\u307E\u3059
+total=\u5408\u8A08
+processing=\u51E6\u7406\u4E2D
 settings=\u8A2D\u5B9A
 language=\u8A00\u8A9E
 process=\u958B\u59CB
