--- a/src/main/resources/strings_ko.properties
+++ b/src/main/resources/strings_ko.properties
@@ -10,11 +10,10 @@ title_create_thumbnail=\uC774\uBBF8\uC9C0\uC5D0\uC11C \uC378\uB124\uC77C \uB9CC\
 tooltip_create_thumbnail=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uC774\uBBF8\uC9C0\uB97C \uB9AC\uC0AC\uC774\uC988\uD558\uC5EC \uC378\uB124\uC77C\uC744 \uB9CC\uB4ED\uB2C8\uB2E4
 title_shift_subtitle=\uC790\uB9C9 \uC2F1\uD06C \uC870\uC815
 tooltip_shift_subtitle=\uC120\uD0DD\uD55C \uD30C\uC77C\uC758 \uC790\uB9C9 \uC2F1\uD06C\uB97C \uC870\uC815\uD569\uB2C8\uB2E4
-total=\uC804\uCCB4
-processing=\uCC98\uB9AC \uC911
 settings=\uC124\uC815
 language=\uC5B8\uC5B4
 process=\uC2DC\uC791
+cancel=\uCDE8\uC18C
 select_directory=\uB514\uB809\uD1A0\uB9AC \uC120\uD0DD
 select_file=\uD30C\uC77C \uC120\uD0DD
 selected_path=\uC120\uD0DD\uD55C \uACBD\uB85C
