add video convert & fixes

--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -10,6 +10,8 @@ title_create_thumbnail=Create Thumbnail from Image
 tooltip_create_thumbnail=Resize image to create thumbnail in the selected directory
 title_shift_subtitle=Resync Subtitle
 tooltip_shift_subtitle=Shift subtitle timing of a selected file
+title_convert_video_format=Convert videos to mp4
+tooltip_convert_video_format=Convert videos to mp4 in the selected directory (requires FFmpeg)
 settings=Settings
 language=Language
 process=Process
@@ -36,3 +38,6 @@ width=Width
 height=Height
 ratio=Ratio
 input_shift_milliseconds=Input timing (milliseconds)
+use_hardware_encoding=Use Hardware Encoding
+video_codec=Video Codec
+current_file=Current File
