--- a/src/main/resources/strings_ja.properties
+++ b/src/main/resources/strings_ja.properties
@@ -10,6 +10,8 @@ title_create_thumbnail=\u753B\u50CF\u304B\u3089\u30B5\u30E0\u30CD\u30A4\u30EB\u3
 tooltip_create_thumbnail=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u753B\u50CF\u3092\u30EA\u30B5\u30A4\u30BA\u3057\u3066\u30B5\u30E0\u30CD\u30A4\u30EB\u3092\u4F5C\u6210\u3057\u307E\u3059
 title_shift_subtitle=\u5B57\u5E55\u306E\u30B7\u30F3\u30AF\u3092\u8ABF\u6574
 tooltip_shift_subtitle=\u9078\u629E\u3057\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u5B57\u5E55\u306E\u30BF\u30A4\u30DF\u30F3\u30B0\u3092\u8ABF\u6574\u3057\u307E\u3059
+title_convert_video_format=\u52D5\u753B\u3092mp4\u5F62\u5F0F\u306B\u5909\u63DB
+tooltip_convert_video_format=\u9078\u629E\u3057\u305F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u52D5\u753B\u3092mp4\u5F62\u5F0F\u306B\u5909\u63DB\u3057\u307E\u3059(FFmpeg\u304C\u5FC5\u8981\u3067\u3059)
 settings=\u8A2D\u5B9A
 language=\u8A00\u8A9E
 process=\u958B\u59CB
@@ -36,3 +38,6 @@ width=\u5E45
 height=\u7E26
 ratio=\u6BD4\u7387
 input_shift_milliseconds=\u30B7\u30D5\u30C8\u3059\u308B\u5024\u3092\u5165\u529B\uFF08\u30DF\u30EA\u79D2\uFF09
+use_hardware_encoding=\u30CF\u30FC\u30C9\u30A6\u30A7\u30A2\u30A8\u30F3\u30B3\u30FC\u30C7\u30A3\u30F3\u30B0\u3092\u4F7F\u7528\u3059\u308B
+video_codec=\u30D3\u30C7\u30AA\u30B3\u30FC\u30C7\u30C3\u30AF
+current_file=\u73FE\u5728\u306E\u30D5\u30A1\u30A4\u30EB
