--- a/src/main/resources/strings_ko.properties
+++ b/src/main/resources/strings_ko.properties
@@ -10,6 +10,8 @@ title_create_thumbnail=\uC774\uBBF8\uC9C0\uC5D0\uC11C \uC378\uB124\uC77C \uB9CC\
 tooltip_create_thumbnail=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uC774\uBBF8\uC9C0\uB97C \uB9AC\uC0AC\uC774\uC988\uD558\uC5EC \uC378\uB124\uC77C\uC744 \uB9CC\uB4ED\uB2C8\uB2E4
 title_shift_subtitle=\uC790\uB9C9 \uC2F1\uD06C \uC870\uC815
 tooltip_shift_subtitle=\uC120\uD0DD\uD55C \uD30C\uC77C\uC758 \uC790\uB9C9 \uC2F1\uD06C\uB97C \uC870\uC815\uD569\uB2C8\uB2E4
+title_convert_video_format=\uBE44\uB514\uC624 \uD615\uC2DD \uBCC0\uD658
+tooltip_convert_video_format=\uC120\uD0DD\uD55C \uB514\uB809\uD1A0\uB9AC\uC758 \uBE44\uB514\uC624\uB97C mp4 \uD615\uC2DD\uC73C\uB85C \uBCC0\uD658\uD569\uB2C8\uB2E4(FFmpeg \uD544\uC694)
 settings=\uC124\uC815
 language=\uC5B8\uC5B4
 process=\uC2DC\uC791
@@ -36,3 +38,6 @@ width=\uD3ED
 height=\uB192\uC774
 ratio=\uBE44\uC728
 input_shift_milliseconds=\uC870\uC815\uD560 \uC2DC\uAC04\uC744 \uC785\uB825(\uBC00\uB9AC\uCD08)
+use_hardware_encoding=\uD558\uB4DC\uC6E8\uC5B4 \uC778\uCF54\uB529 \uC0AC\uC6A9
+video_codec=\uBE44\uB514\uC624 \uCF54\uB371
+current_file=\uD604\uC7AC \uD30C\uC77C
